--- a/index.html
+++ b/index.html
@@ -97,5 +97,16 @@
 				</div>
 			</div>
 		</section>
+		<footer class="container-fluid bg-footer">
+			<div class="container">
+				<ul>
+					<li><a href="#"><img src="./img/footer/fesbook.png" alt="fesbook"></a></li>
+					<li><a href="#"><img src="./img/footer/twiter.png" alt="twiter"></a></li>
+					<li><a href="#"><img src="./img/footer/google.png" alt="google"></a></li>
+					<li><a href="#"><img src="./img/footer/pinteres.png" alt="pinteres"></a></li>
+				</ul>
+				<p>© 2023 Freeeze. All Rights Reserved.</p>
+			</div>
+		</footer>
 	</body>
 </html>
