added about page

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 				<nav>
 					<ul>
 						<li>
-							<a class="active" href="#">HOME</a>
+							<a class="active" href="./index.html">HOME</a>
 						</li>
 
 						<li class="drop-list">
-							<a href="#">ABOUT</a>
+							<a href="./pages/about.html">ABOUT</a>
 							<ul>
 								<li>
 									<a href="#">PRODUCT</a>
