--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>HOME</title>
 		<link rel="stylesheet" href="./style/style.css" />
 	</head>
 	<body>
@@ -19,7 +19,7 @@
 							<a href="./pages/about.html">ABOUT</a>
 							<ul>
 								<li>
-									<a href="#">PRODUCT</a>
+									<a href="./pages/product.html">PRODUCTS</a>
 								</li>
 							</ul>
 						</li>
