--- a/pages/about.html
+++ b/pages/about.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>ABOUT</title>
 		<link rel="stylesheet" href="../style/style.css" />
 	</head>
 	<body>
@@ -16,10 +16,10 @@
 						</li>
 
 						<li class="drop-list">
-							<a class="active" href="#">ABOUT</a>
+							<a class="active hover" href="#">ABOUT</a>
 							<ul>
 								<li>
-									<a href="#">PRODUCT</a>
+									<a href="../pages/product.html">PRODUCTS</a>
 								</li>
 							</ul>
 						</li>
