added blog and singlepost pages

--- a/pages/about.html
+++ b/pages/about.html
@@ -25,10 +25,10 @@
 						</li>
 
 						<li class="drop-list">
-							<a href="#">BLOG</a>
+							<a href="./blog.html">BLOG</a>
 							<ul>
 								<li>
-									<a href="#">SINGLE POST</a>
+									<a href="../pages/single_post.html">SINGLE POST</a>
 								</li>
 							</ul>
 						</li>
